hard-gists/242176c5bdb282b0a327/run.log
=== Docker Run Log for 242176c5bdb282b0a327 ===
Started at: Mi 29. Okt 13:04:17 CET 2025

[2025-10-29 13:04:17] START: Running container for 242176c5bdb282b0a327
[2025-10-29 13:04:17] SUCCESS: Container 4485fc3e6facffdc4ffcb53eeb8d1dea95f212eba8e079c01d9e9ad40a81d0f3 started for 242176c5bdb282b0a327
=== Container logs for 242176c5bdb282b0a327 ===
  File "/snippet.py", line 16
    print "Buffering..."
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 242176c5bdb282b0a327 ===
[2025-10-29 13:04:19] INFO: Container 4485fc3e6facffdc4ffcb53eeb8d1dea95f212eba8e079c01d9e9ad40a81d0f3 has stopped
